syntax = "proto3";

package postservice;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

message MutationReply {
  bool result = 1;
}

message User {
  string email = 1;
}

message Post {
  string id = 1;
  User author = 2;
  string content = 3;
  int64 createdAt = 15;
}

message CreateRequest {
  string content = 1;
}

message PostsReply {
  repeated Post items = 1;
}

message CountReply {
  int32 count = 1;
}

service PostService {
  rpc Create (CreateRequest) returns (MutationReply) {
    option (google.api.http) = {
      post: "/posts"
      body: "*"
    };
  }

  rpc All (google.protobuf.Empty) returns (PostsReply) {
    option (google.api.http).get = "/posts";
  }

  rpc Count (google.protobuf.Empty) returns (CountReply) {
    option (google.api.http).get = "/posts/count";
  }
}
